argo/example-app/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    example-app.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "example-app"
spec:
  rules:
    - host: example-app.com
      http:
        paths:
          - backend:
              service:
                name: example-service
                port:
                  number: 5000
